--- a/styles/style.scss
+++ b/styles/style.scss
@@ -19,19 +19,20 @@ body {
 
 .header {
     overflow-x: scroll;
-    
+
     .header__list {
         display: flex;
         color: white;
         gap: 10px;
         width: max-content;
 
-        .header__list-item{
+        .header__list-item {
             border: 1px solid rgba($color: #fff, $alpha: 0.5);
             padding: 10px;
             border-radius: 20px;
             white-space: nowrap;
         }
+
         .header__list-item--inverted {
             background-color: white;
             color: black;
@@ -48,91 +49,75 @@ body {
 .cards {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 20px; 
+    gap: 10px;
     margin: 20px 0;
 
-    .cards__card{
+    .cards__card {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         padding: 20px 10px;
         border-radius: 16px;
         background-color: white;
-        .card__title{
-            font-size: 24px;
+        gap: 20px;
+
+        .card__title {
+            font-size: 28px;
         }
-        .card__footer{
-            font-size: 12px;
+
+        .card__footer {
+            font-size: 14px;
+            display: flex;
+            justify-content: space-between;
+
+            span {
+                border-radius: 20px;
+                padding: 5px 10px;
+                border: 1px solid black;
+            }
+
+            .price {
+                background-color: rgb(255,221,44);
+            }
+
+            .length {
+            }
         }
 
         &:first-child {
-            
+            background-color: #292d33;
+            border: 1px solid #f5f4ef;
+
+            .card__title {
+                color: white;
+            }
         }
 
-        &:nth-child(3n){
+        &:nth-child(2) {
+            background-color: #f5f4ef;
+        }
+
+        &:nth-child(3) {
+            background-color: #f8fcb5;
+        }
+
+        &:nth-child(4) {
+            background-color: #b19ff6;
+        }
+
+        &:nth-child(5) {
+            background-color: #fed3d3;
+        }
+
+        &:nth-child(6) {
+            background-color: #d0fedf;
+        }
+
+        &:nth-child(3n) {
             grid-column: span 2;
         }
     }
 }
-
-// .cards__card {
-//     height: 140px;
-//     padding: 12px;
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: space-around;
-//     border-radius: 20px;
-//     outline: 2px solid black;
-// }
-
-// .card__title{
-//     font-size: 24px;    
-// }
-
-// .card__footer{
-//     background-color: yellow;
-//     display: flex;
-//     justify-content: space-between;
-//     align-items: center;
-// }
-
-// .price{
-//     padding: 8px;
-//     font-size: 20px;
-//     border-radius: 50px;
-//     outline: 1px solid black;
-// }
-
-// .length{
-//     width: 24px;
-//     height: 24px;
-//     border-radius: 20%;
-//     outline: 1px solid black;
-// }
-
-// .cards__card:nth-child(1){
-//     background-color: black;
-//     color: grey;
-//     padding: 10px;
-// }
-
-// .cards__card:nth-child(3){
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//     background-color: greenyellow;
-//     // grid-column-start: 1;
-//     // grid-column-end: 3;
-//     grid-column: 1 / span 2;
-// }
-
-// .cards__card:nth-child(6){
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//     background-color: coral;
-//     grid-column: 1 / span 2;
-// }
 
 
 // // responsive 
@@ -141,6 +126,6 @@ body {
 //       grid-template-columns: 1fr; /* Switch to a single column on smaller screens */
 //       max-width: 100%;
 //     }
-  
+
 //     /* Add any additional responsive styling as needed */
 //   }
