--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,121 +1,79 @@
 @import "./reset.scss";
 
-$grey: #c6caca;
+// $grey: #c6caca;
+$gridGap: 5px;
+$cellRadius: 12px; 
 
-body {
+body{
+    height: 100vh;
+    background-color: #7d4aa9;
     display: flex;
     justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #bcbfbf;
-}
-
-.phone {
-    width: 480px;
-    height: 90%;
-    border-radius: 15px;
-    background-color: $grey;
-    box-shadow: 5px 10px 10px rgba($color: #000000, $alpha: 0.5);
-}
-
-.header {
-    padding: 50px 15px 20px 15px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    .header__title {
-        text-transform: uppercase;
-        font-weight: bold;
-    }
-}
-
-.total {
-    background-color: #000000;
-    display: flex;
-    flex-direction: column;
     align-items: flex-end;
-    padding: 30px 15px;
-    color: $grey;
-    gap: 8px;
-
-    .total__price {
-        font-size: 28px;
-        font-weight: 700;
-    }
-    .total__subtitle {
-        font-size: 20px;
-        font-weight: 400;
-    }
 }
 
-.items {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    background-color: $grey;
+.wrapper{
+    max-width: 80%;
+    height: 95%;
+    background-color: black;
+    padding: 20px;
+    box-sizing: border-box;
 
-    .item {
-        position: relative;
-        border-top: 5px solid black;
-        .item__info {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            align-items: flex-start;
-            padding: 30px 15px;
-            .item__info-col {
-                display: flex;
-                flex-direction: column;
-                gap: 8px;
-                &:nth-child(2) {
-                    align-items: flex-end;
+    .grid{
+        display: grid;
+        grid-template-columns: 1.5fr 1fr;
+        height: 100%;
+        gap: $gridGap;
+
+        // 💡Target: All the first child in the grid
+        // & > * {
+        //     background-color: white;
+        //     border-radius: 8px;
+        // }
+
+        header {
+            background-color: white;
+            border-radius: 8px;
+        }
+        .grid__col{
+            &:first-child{
+                background-color: black;
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                grid-template-rows: 1.8fr 1fr;
+                gap: $gridGap;
+            }
+
+            &:last-child{
+                display: grid;
+                grid-template-columns: 1fr;
+                grid-template-rows: 1.8fr 1fr;
+                // grid-template-rows: ;
+                gap: $gridGap;
+                .subgrid{
+                    display: grid;
+                    grid-template-columns: 1.5fr 1fr;
+                    grid-template-rows: 1.3fr 1fr;
+                }
+                .blog-post{
+                    background-color: white;
+                    border-radius: $cellRadius;
                 }
             }
-            .item__title {
-                font-size: 38px;
-                font-weight: bold;
-            }
-            .item__subtitle {
-                font-size: 18px;
-                font-weight: bold;
-            }
-            .item__total-price {
-                font-size: 34px;
-                font-weight: 500;
-            }
-            .item__piece-price {
-                font-size: 24px;
-                font-weight: 500;
-            }
+        }
+
+        .header{
+            grid-column: span 2;
+            border-radius: $cellRadius;
+        }
+
+        .grid__img{
+            background-image: url("https://source.unsplash.com/random");
+            background-size: cover;
+            border-radius: $cellRadius;
         }
     }
+
+    
 }
 
-.item__specs {
-    background-color: red;
-    border-top: 5px solid black;
-    border-bottom: 5px solid black;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, 125px);
-    .spec {
-        display: flex;
-        flex-direction: column;
-        padding: 24px;
-        justify-content: center;
-        font-weight: bold;
-
-        &:last-child {
-            border-left: 5px solid black;
-        }
-    }
-}
-
-.item__photo {
-    position: absolute;
-    width: 30%;
-    height: 50%;
-    border: 5px solid black;
-    right: 15px;
-    bottom: 0px;
-    object-fit: cover;
-}
